# dataagent-ag-ui

./: .gitignore  README.md
.github/workflows/: deploy-api.yml  deploy-frontend.yml
api/: .env.example  Dockerfile  main.py  monitoring.py  patches.py  pyproject.toml
api/agents/: __init__.py  agent.py  logistics_agent.py
api/data/: flights.json
api/middleware/: __init__.py  auth.py  orchestrators.py  responses_api.py
api/src/: main.py
frontend/: .env.example  Dockerfile  next.config.ts  package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(home)/: layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/app/logistics/: layout.tsx  page.tsx
frontend/src/components/: AuthButton.tsx  AuthenticatedCopilotKit.tsx  FlightDetailCard.tsx  HistoricalChart.tsx  NoAuthCopilotKit.tsx  Providers.tsx
frontend/src/components/logistics/: FlightDetailCard.tsx  FlightListCard.tsx  HistoricalChart.tsx  RiskBadge.tsx
frontend/src/lib/: logistics-types.ts  logisticsTypes.ts  useLogisticsData.ts
infra/: variables.tf  workload.tf
scripts/: create-chat-app.ps1  create-github-creds.ps1  run-agent.sh
